[gd_scene load_steps=9 format=3 uid="uid://c8unx82ii3wqp"]

[ext_resource type="Script" path="res://map_select.gd" id="1_muy71"]
[ext_resource type="Texture2D" uid="uid://b35r5ke0yjk7v" path="res://Assets/Sprites/southwest-landscape-digital-art.jpg" id="2_2dxwa"]
[ext_resource type="FontFile" uid="uid://cqcu8q8tr7i3" path="res://Assets/Sprites/Popcat.otf" id="3_bk2ce"]
[ext_resource type="AudioStream" uid="uid://dn8n8ve0gcij8" path="res://Assets/sounds/Holiday movie background tone [TubeRipper.com].mp3" id="4_vdb7m"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h7x8t"]
texture = ExtResource("2_2dxwa")
modulate_color = Color(1, 1, 1, 0.552941)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_n3k1x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jolaa"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.243137)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5dl7n"]
bg_color = Color(0.656285, 0.656285, 0.656285, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_color = Color(0, 0, 0, 0.243137)
shadow_size = 5
shadow_offset = Vector2(0, 3.41)

[node name="Map Select" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_muy71")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_h7x8t")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -177.0
offset_top = -159.0
offset_right = 159.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="map_anurag" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_n3k1x")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/disabled = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover = SubResource("StyleBoxFlat_5dl7n")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5dl7n")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/normal = SubResource("StyleBoxFlat_jolaa")
text = "ICY 1"

[node name="map_4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_n3k1x")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/disabled = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover = SubResource("StyleBoxFlat_5dl7n")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5dl7n")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/normal = SubResource("StyleBoxFlat_jolaa")
text = "ICY 2"

[node name="map_3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_n3k1x")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/disabled = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover = SubResource("StyleBoxFlat_5dl7n")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5dl7n")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/normal = SubResource("StyleBoxFlat_jolaa")
text = "GRASSLANDS 1"

[node name="map_2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_n3k1x")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/disabled = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/hover = SubResource("StyleBoxFlat_5dl7n")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/pressed = SubResource("StyleBoxFlat_5dl7n")
theme_override_styles/normal_mirrored = SubResource("StyleBoxFlat_jolaa")
theme_override_styles/normal = SubResource("StyleBoxFlat_jolaa")
text = "GRASSLANDS 2"

[node name="BACK" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "BACK
"

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -246.0
offset_top = 24.0
offset_right = 247.0
offset_bottom = 112.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("3_bk2ce")
theme_override_font_sizes/font_size = 80
text = "SELECT MAP"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -439.0
offset_top = 467.0
offset_right = 154.0
offset_bottom = 670.0
grow_horizontal = 2
scale = Vector2(0.634656, 0.625655)
theme_override_fonts/font = ExtResource("3_bk2ce")
theme_override_font_sizes/font_size = 80
text = "ENTER MATCH
DURATION (S):"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LineEdit" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 568.0
offset_top = 494.0
offset_right = 635.063
offset_bottom = 525.0
scale = Vector2(4.61538, 2.54167)
placeholder_text = "45 "

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_vdb7m")
volume_db = 16.0
autoplay = true
playback_type = 1
parameters/looping = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 929.0
offset_top = 491.0
offset_right = 1000.0
offset_bottom = 522.0
scale = Vector2(2.69381, 2.6134)
text = "Confirm"

[connection signal="pressed" from="VBoxContainer/map_anurag" to="." method="_on_map_anurag_pressed"]
[connection signal="pressed" from="VBoxContainer/map_4" to="." method="_on_map_4_pressed"]
[connection signal="pressed" from="VBoxContainer/map_3" to="." method="_on_map_3_pressed"]
[connection signal="pressed" from="VBoxContainer/map_2" to="." method="_on_map_2_pressed"]
[connection signal="pressed" from="VBoxContainer/BACK" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Button" to="." method="confirm"]
